--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mundo Taekwondo</title>
-</head>
-<body>
-    <h1>Bem-vindo ao Mundo Taekwondo!</h1>
-</body>
+    <link rel="stylesheet" href="body.css" />
+  </head>
+  <body>
+    <header>
+      
+    </header>
+    <main>
+      <section>
+        <h2>O que é Taekwondo?</h2>
+        <p>O Taekwondo é uma arte marcial coreana conhecida por seus chutes altos e rápidos, disciplina e filosofia.</p>
+      </section>
+      <section>
+        <h2>Benefícios</h2>
+        <ul>
+          <li>Disciplina e respeito</li>
+          <li>Melhora do condicionamento físico</li>
+          <li>Autodefesa</li>
+          <li>Confiança e autoestima</li>
+        </ul>
+      </section>
+      <!-- React irá renderizar aqui se necessário -->
+      <div id="root"></div>
+    </main>
+    <footer>
+      &copy; 2025 Mundo Taekwondo. Todos os direitos reservados.
+    </footer>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
